--- a/BizplayReceipt/Common/Popup/PopupSB.storyboard
+++ b/BizplayReceipt/Common/Popup/PopupSB.storyboard
@@ -215,6 +215,65 @@
             </objects>
             <point key="canvasLocation" x="656.52173913043487" y="128.57142857142856"/>
         </scene>
+        <!--Date Picker Popup-->
+        <scene sceneID="uGa-zj-3uA">
+            <objects>
+                <viewController storyboardIdentifier="DatePickerPopup_sid" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="4ij-85-Bwg" customClass="DatePickerPopup" customModule="BizplayReceipt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sp1-Yl-rid">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sdC-qp-29k">
+                                <rect key="frame" x="20" y="302.5" width="374" height="291"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="날짜 및 시간 선택" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfV-MF-Ekl">
+                                        <rect key="frame" x="20" y="14" width="116.5" height="21"/>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="17"/>
+                                        <color key="textColor" red="0.25882352939999997" green="0.52549019610000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NWs-yJ-gJB">
+                                        <rect key="frame" x="0.0" y="52" width="374" height="1"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="nCc-MR-mTu">
+                                        <rect key="frame" x="20" y="61" width="334" height="216"/>
+                                        <connections>
+                                            <action selector="changeDatePicker:" destination="4ij-85-Bwg" eventType="valueChanged" id="HIw-EX-H9C"/>
+                                        </connections>
+                                    </datePicker>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="NWs-yJ-gJB" secondAttribute="trailing" id="B7l-Vb-nIP"/>
+                                    <constraint firstItem="dfV-MF-Ekl" firstAttribute="leading" secondItem="sdC-qp-29k" secondAttribute="leading" constant="20" id="EhY-lJ-7gs"/>
+                                    <constraint firstAttribute="trailing" secondItem="nCc-MR-mTu" secondAttribute="trailing" constant="20" symbolic="YES" id="GId-9K-1Jx"/>
+                                    <constraint firstItem="nCc-MR-mTu" firstAttribute="leading" secondItem="sdC-qp-29k" secondAttribute="leading" constant="20" symbolic="YES" id="H12-bo-p7O"/>
+                                    <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="dfV-MF-Ekl" secondAttribute="trailing" constant="251" id="WTh-kg-awc"/>
+                                    <constraint firstItem="nCc-MR-mTu" firstAttribute="top" secondItem="NWs-yJ-gJB" secondAttribute="bottom" constant="8" id="XFC-fY-10z"/>
+                                    <constraint firstItem="NWs-yJ-gJB" firstAttribute="leading" secondItem="sdC-qp-29k" secondAttribute="leading" id="awh-z3-fqJ"/>
+                                    <constraint firstItem="nCc-MR-mTu" firstAttribute="top" secondItem="NWs-yJ-gJB" secondAttribute="bottom" constant="8" id="d6m-Pr-nup"/>
+                                    <constraint firstAttribute="height" constant="291" id="fz4-ZZ-5yE"/>
+                                    <constraint firstItem="dfV-MF-Ekl" firstAttribute="top" secondItem="sdC-qp-29k" secondAttribute="top" constant="14" id="mOu-C5-wbB"/>
+                                    <constraint firstAttribute="bottom" secondItem="dfV-MF-Ekl" secondAttribute="bottom" constant="256" id="oFO-aT-fU2"/>
+                                    <constraint firstItem="NWs-yJ-gJB" firstAttribute="top" secondItem="dfV-MF-Ekl" secondAttribute="bottom" constant="17" id="pi5-f4-k5I"/>
+                                    <constraint firstAttribute="bottom" secondItem="nCc-MR-mTu" secondAttribute="bottom" constant="14" id="qsl-AU-4Q1"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="bj0-BZ-6VI" firstAttribute="trailing" secondItem="sdC-qp-29k" secondAttribute="trailing" constant="20" id="FMc-gx-kfP"/>
+                            <constraint firstItem="sdC-qp-29k" firstAttribute="leading" secondItem="bj0-BZ-6VI" secondAttribute="leading" constant="20" id="Xt4-E8-iur"/>
+                            <constraint firstItem="sdC-qp-29k" firstAttribute="centerY" secondItem="Sp1-Yl-rid" secondAttribute="centerY" id="nSn-IR-tcM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bj0-BZ-6VI"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="47D-6L-ukF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1571.0144927536232" y="128.57142857142856"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bigCameraIcon" width="56" height="50"/>
